// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userApi.getUser work correctly User get as expected 1`] = `
{
  "answers": {
    "6ni6ok3ym7mf1p33lnez": "optionOne",
    "vthrdm985a262al8qx3do": "optionTwo",
    "xj352vofupe1dqz9emx13r": "optionOne",
  },
  "avatarURL": "/images/avatar/3.png",
  "id": "mtsamis",
  "name": "Mike Tsamis",
  "password": "xyz123",
  "questions": [
    "6ni6ok3ym7mf1p33lnez",
    "xj352vofupe1dqz9emx13r",
  ],
}
`;

exports[`userApi.getUsers work correctly Users get as expected 1`] = `
{
  "mtsamis": {
    "answers": {
      "6ni6ok3ym7mf1p33lnez": "optionOne",
      "vthrdm985a262al8qx3do": "optionTwo",
      "xj352vofupe1dqz9emx13r": "optionOne",
    },
    "avatarURL": "/images/avatar/3.png",
    "id": "mtsamis",
    "name": "Mike Tsamis",
    "password": "xyz123",
    "questions": [
      "6ni6ok3ym7mf1p33lnez",
      "xj352vofupe1dqz9emx13r",
    ],
  },
  "sarahedo": {
    "answers": {
      "6ni6ok3ym7mf1p33lnez": "optionOne",
      "8xf0y6ziyjabvozdd253nd": "optionOne",
      "am8ehyc8byjqgar0jgpub9": "optionTwo",
      "loxhs1bqm25b708cmbf3g": "optionTwo",
    },
    "avatarURL": "/images/avatar/1.png",
    "id": "sarahedo",
    "name": "Sarah Edo",
    "password": "password123",
    "questions": [
      "8xf0y6ziyjabvozdd253nd",
      "am8ehyc8byjqgar0jgpub9",
    ],
  },
  "tylermcginnis": {
    "answers": {
      "vthrdm985a262al8qx3do": "optionOne",
      "xj352vofupe1dqz9emx13r": "optionTwo",
    },
    "avatarURL": "/images/avatar/2.png",
    "id": "tylermcginnis",
    "name": "Tyler McGinnis",
    "password": "abc321",
    "questions": [
      "loxhs1bqm25b708cmbf3g",
      "vthrdm985a262al8qx3do",
    ],
  },
}
`;

exports[`userApi.signIn work correctly User sign in as expected 1`] = `
{
  "answers": {
    "6ni6ok3ym7mf1p33lnez": "optionOne",
    "vthrdm985a262al8qx3do": "optionTwo",
    "xj352vofupe1dqz9emx13r": "optionOne",
  },
  "avatarURL": "/images/avatar/3.png",
  "id": "mtsamis",
  "name": "Mike Tsamis",
  "password": "xyz123",
  "questions": [
    "6ni6ok3ym7mf1p33lnez",
    "xj352vofupe1dqz9emx13r",
  ],
}
`;
